objects/ssot__AssessmentTask__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssessmentTaskDefinitionId__c</fullName>
        <label>Assessment Task Definition</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssessmentTaskType__c</fullName>
        <label>Assessment Task Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CompletionDateTime__c</fullName>
        <label>Completion DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DueDateTime__c</fullName>
        <label>Due DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Assessment Task Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsMandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsRecurring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRecurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecurrenceDayOfMonthNumber__c</fullName>
        <label>Recurrence Day of Month Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RecurrenceDayOfWeekNumber__c</fullName>
        <label>Recurrence Day of Week Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RecurrenceEndDate__c</fullName>
        <label>Recurrence End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__RecurrenceInstanceNumber__c</fullName>
        <label>Recurrence Instance Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RecurrenceMonthOfYearNumber__c</fullName>
        <label>Recurrence Month of Year Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RecurrenceStartDate__c</fullName>
        <label>Recurrence Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedItemToId__c</fullName>
        <label>Related To Item</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedToObject__c</fullName>
        <label>Related To Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReminderDateTime__c</fullName>
        <label>Reminder DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SequenceNumber__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectText__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaskAction__c</fullName>
        <label>Task Action</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaskPriority__c</fullName>
        <label>Task Priority</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaskRecurrenceTimeUOM__c</fullName>
        <label>Task Recurrence Time Interval</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaskRecurrenceTimeZone__c</fullName>
        <label>Task Recurrence Time Zone</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaskRecurrenceType__c</fullName>
        <label>Task Recurrence Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaskStatus__c</fullName>
        <label>Task Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaskType__c</fullName>
        <label>Task Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>